# nyt-games-bot

./: .env.template  Dockerfile  docker-compose.yml  pyproject.toml
src/: bot.py
