[tool.poetry]
name = "nyt-games-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
multidict = "^6.0.5"
aiohttp = "^3.10.5"
aiosignal = "^1.3.1"
appdirs = "^1.4.4"
attrs = "^24.2.0"
beautifulsoup4 = "^4.12.3"
bokeh = "^3.5.1"
certifi = "^2024.7.4"
charset-normalizer = "^3.3.2"
contourpy = "^1.2.1"
cycler = "^0.12.1"
discord = "^2.3.2"
discord-py = "^2.4.0"
fonttools = "^4.53.1"
frozenlist = "^1.4.1"
h11 = "^0.14.0"
idna = "^3.7"
jinja2 = "^3.1.4"
kiwisolver = "^1.4.5"
lxml = "^5.3.0"
markupsafe = "^2.1.5"
matplotlib = "^3.9.2"
mysql-connector-python = "^9.0.0"
numpy = "^2.1.0"
outcome = "^1.3.0.post0"
packaging = "^24.1"
pandas = "^2.2.2"
pillow = "^10.4.0"
protobuf = "^5.27.3"
pyparsing = "^3.1.2"
pysocks = "^1.7.1"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
pyyaml = "^6.0.2"
requests = "^2.32.3"
seaborn = "^0.13.2"
selenium = "^4.23.1"
six = "^1.16.0"
sniffio = "^1.3.1"
sortedcontainers = "^2.4.0"
soupsieve = "^2.6"
tornado = "^6.4.1"
tqdm = "^4.66.5"
trio = "^0.26.2"
trio-websocket = "^0.11.1"
typing-extensions = "^4.12.2"
tzdata = "^2024.1"
urllib3 = "^2.2.2"
webdriver-manager = "^4.0.2"
wsproto = "^1.2.0"
xyzservices = "^2024.6.0"
yarl = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
